syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

// protoc -I . -I ../../../third_party --go_out=. --go-grpc_out=. --gin_out=. order.proto 
service Order {
    // 购物车
    rpc CartItemList(UserInfo) returns (CartItemListResponse); // 获取用户的购物车信息
    rpc CreateCartItem(CartItemRequest) returns (ShopCartInfoResponse); // 添加商品到购物车
    rpc UpdateCartItem(CartItemRequest) returns (google.protobuf.Empty);  // 修改购物车信息
    rpc DeleteCartItem(CartItemRequest) returns (google.protobuf.Empty); // 删除购物车条目

    // 订单
    rpc CreateOrder(OrderRequest) returns (google.protobuf.Empty); // 创建订单
    rpc CreateOrderCom(OrderRequest) returns (google.protobuf.Empty); // 创建订单补偿
    rpc SubmitOrder(OrderRequest) returns (google.protobuf.Empty); // 提交订单
    rpc OrderList(OrderFilterRequest) returns (OrderListResponse); // 订单列表
    rpc OrderDetail(OrderRequest) returns (OrderInfoDetailReponse); // 订单详情
    rpc UpdateOrderStatus(OrderStatus) returns (google.protobuf.Empty); // 修改订单状态
}

message OrderStatus {
    int32 id = 1;
    string orderSn = 2;
    string status = 3;
}

message OrderInfoDetailReponse {
    OrderInfoResponse orderInfo = 1;
    repeated OrderItemReponse goods = 2;
}

message OrderItemReponse {
    int32 id = 1;
    int32 orderId = 2;
    int32 goodsId = 3;
    string goodsName = 4;
    string goodsImage = 5;
    float goodsPrice = 6;
    int32 nums = 7;
}

message OrderFilterRequest {
    int32 userId = 1;
    int32 pages = 2;
    int32 pagePerNums = 3;
}

message OrderListResponse {
    int32 total = 1;
    repeated OrderInfoResponse data = 2;
}


message OrderRequest {
    int32 id = 1;
    int32 userId = 2;
    string address = 3; // 收货地址
    string name = 4; // 收货人
    string mobile = 5; // 收货手机号码
    string post = 6; // 留言
    string orderSn = 7;

    repeated OrderItemReponse orderItems = 8;
}

message OrderInfoResponse {
    int32 id = 1;
    int32 userId = 2;
    string orderSn = 3;
    string payType = 4;
    string status = 5;
    string post = 6;
    float total = 7;
    string address = 8;
    string name = 9;
    string mobile = 10;
    string addTime = 11;
}

message CartItemRequest {
    int32 id = 1;
    int32 userId = 2;
    int32 goodsId = 3;
    string goodsName = 4;
    string goodsImage = 5;
    float goodsPrice = 6;
    int32 nums = 7;
    bool checked = 8;
}


message UserInfo {
    int32 id = 1;
}

message ShopCartInfoResponse {
    int32 id = 1;
    int32 userId = 2;
    int32 goodsId = 3;
    int32 nums = 4;
    bool checked = 5;
}

message CartItemListResponse {
    int32 total = 1;
    repeated ShopCartInfoResponse data = 2;
}